fix ai page issues
